HelloUltraviolet/Fixtures/RejectedSource/Statements/ContinueOutsideLoop/Source/Main.uv
//! Rejected statement specimen for continue outside loop context.

public procedure continueOutsideLoopReference() -> i32 {
    continue
    return 0
}
